--- a/LoginPage.html
+++ b/LoginPage.html
@@ -84,7 +84,7 @@ input[type=text]:focus, input[type=password]:focus {
     <input type="button" onclick="location.href='BookDetailsPage.html';" value="Login" />
 <button type="reset" value="Reset">Cancel</button>
 
-  </form>C:\Users\ma329300\Desktop\SDET\SDET_HTML_CSS_BootStrap
+  </form>
 </div>
 
 
