--- a/LoginPage.html
+++ b/LoginPage.html
@@ -76,7 +76,7 @@ input[type=text]:focus, input[type=password]:focus {
     <h1>Login</h1>
 
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" required>
+     Username: <input type="text" name="usrname" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
