--- a/LoginPage.html
+++ b/LoginPage.html
@@ -72,16 +72,16 @@ input[type=text]:focus, input[type=password]:focus {
 
 <h2>Online Library Login</h2>
 <div class="bg-img">
-  <form action="/action_page.php" class="container">
+  <form action="BookDetailsPage.html" class="container">
     <h1>Login</h1>
 
     <label for="email"><b>Email</b></label>
-     Username: <input type="text" name="usrname" required>
+     <input type="text"  placeholder="Enter UserId" name="usrname" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <input type="button" onclick="location.href='BookDetailsPage.html';" value="Login" />
+    <input type="button"  value="Login" />
 <button type="reset" value="Reset">Cancel</button>
 
   </form>
