--- a/LoginPage.html
+++ b/LoginPage.html
@@ -81,7 +81,7 @@ input[type=text]:focus, input[type=password]:focus {
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <input type="button"  value="Login" />
+     <input type="submit" value="Login">
 <button type="reset" value="Reset">Cancel</button>
 
   </form>
