--- a/BookDetailsPage.html
+++ b/BookDetailsPage.html
@@ -22,7 +22,7 @@ body{
   <li><a href="IssueAck.html">DataWare House</a></li>
   <li><a href="IssueAck.html">Software Eng</a></li>
   <li><a href="IssueAck.html">Computer Network</a></li>
-  <li><a href="IssueAck.html">Cloud Computing</a></li>
+  <li><a href="https://librarypdfs.file.core.windows.net/manishfiles/cloud_computing_tutorial.pdf">Cloud Computing</a></li>
   <li><a href="IssueAck.html">Maths</a></li>
   <li><a href="IssueAck.html">Economics</a></li>
   <li><a href="IssueAck.html">Genral Knowledge</a></li>
