--- a/BookDetailsPage.html
+++ b/BookDetailsPage.html
@@ -18,16 +18,16 @@ body{
 <h2>Below Books Are available for Issue</h2>
 <ul>
 
-  <li><a href="IssueAck.html">Software Architecture</a></li>
-  <li><a href="IssueAck.html">DataWare House</a></li>
-  <li><a href="IssueAck.html">Software Eng</a></li>
-  <li><a href="IssueAck.html">Computer Network</a></li>
-  <li><a href="https://librarypdfs.file.core.windows.net/manishfiles/cloud_computing_tutorial.pdf">Cloud Computing</a></li>
-  <li><a href="IssueAck.html">Maths</a></li>
-  <li><a href="IssueAck.html">Economics</a></li>
-  <li><a href="IssueAck.html">Genral Knowledge</a></li>
-  <li><a href="IssueAck.html">Computer Fundamentals</a></li>
-  <li><a href="IssueAck.html">Science</a></li>
+  <li><a href="https://tinyurl.com/y5k9wrq2">Software Architecture</a></li>
+  <li><a href="https://tinyurl.com/y393gyqv">DataWare House</a></li>
+  <li><a href="https://tinyurl.com/y2ud8luh">Software Eng</a></li>
+  <li><a href="https://tinyurl.com/yxgjzx5v">Computer Network</a></li>
+  <li><a href="https://tinyurl.com/y3napc79">Cloud Computing</a></li>
+  <li><a href="https://tinyurl.com/yymuw5xv">Maths</a></li>
+  <li><a href="https://tinyurl.com/y6j72yh5">Economics</a></li>
+  <li><a href="https://tinyurl.com/yxllr4wg">Genral Knowledge</a></li>
+  <li><a href="https://tinyurl.com/y6j98wno">Computer Fundamentals</a></li>
+  <li><a href="https://tinyurl.com/y6j98wno">Science</a></li>
 	
 	 
 </ul>
