--- a/BookDetailsPage.html
+++ b/BookDetailsPage.html
@@ -15,7 +15,8 @@ body{
 </style>
 <body>
 <h1> Book Details </h1>
-<h2>Below Books Are available for Issue</h2>
+<h2>Below Books PDFS Are available for Reading</h2>
+	<h3> Click on the book name to get the pdf</h3>
 <ul>
 
   <li><a href="https://tinyurl.com/y5k9wrq2">Software Architecture</a></li>
