--- a/BookDetailsPage.html
+++ b/BookDetailsPage.html
@@ -15,7 +15,7 @@ body{
 </style>
 <body>
 <h1> Book Details </h1>
-<h2>Below Books PDFS Are available for Reading</h2>
+<h2>Below  Pdf Books Are available for Reading</h2>
 	<h3> Click on the book name to get the pdf</h3>
 <ul>
 
